--- a/src/_script.less
+++ b/src/_script.less
@@ -6,7 +6,7 @@
 \        SETTINGS       /
  \        TOOLS        /
   \      GENERIC      /
-   \      BASE       /
+   \     ELEMENTS    /
     \    OBJECTS    /
      \  COMPONENTS /
       \ OVERRIDES /
@@ -17,5 +17,9 @@
            \ /
 */
 @import 'settings/settings.css';
-
+@import 'tools/tools.css';
+@import 'generic/generic.css';
 @import 'elements/element.css';
+@import 'objects/objects.css';
+@import 'components/components.css';
+@import 'overrides/overrides.css';
