--- a/src/elements/element.sectioning.css
+++ b/src/elements/element.sectioning.css
@@ -1,8 +1,27 @@
+/*
+  Content sectioning elements allow you to organize the document content into logical pieces. Use the sectioning elements to create a broad outline for your page content, including header and footer navigation, and heading elements to identify sections of content.
+*/
+
+/* The HTML <address> element supplies contact information for its nearest <article> or <body> ancestor; in the latter case, it applies to the whole document. */
 address {}
+
+/* The HTML <article> element represents a self-contained composition in a document, page, application, or site, which is intended to be independently distributable or reusable (e.g., in syndication). Examples include: a forum post, a magazine or newspaper article, or a blog entry. */
 article {}
+
+/* The HTML <aside> element represents a section of a document with content connected tangentially to the main content of the document (often presented as a sidebar). */
 aside {}
+
+/* The HTML <footer> element represents a footer for its nearest sectioning content or sectioning root element. A footer typically contains information about the author of the section, copyright data or links to related documents. */
 footer {}
+
+/* The HTML <header> element represents a group of introductory or navigational aids. It may contain some heading elements but also other elements like a logo, a search form, and so on. */
 header {}
+
+/* The HTML <hgroup> element represents a multi-level heading for a section of a document. It groups a set of <h1>–<h6> elements. */
 hgroup {}
+
+/* The HTML <nav> element represents a section of a page that links to other pages or to parts within the page: a section with navigation links. */
 nav {}
+
+/* The HTML <section> element represents a standalone section of functionality contained within an HTML document, typically with a heading, which doesn't have a more specific semantic element to represent it. */
 section {}
