--- a/src/elements/element.text-inline.css
+++ b/src/elements/element.text-inline.css
@@ -1,30 +1,93 @@
+/*
+  Use the HTML inline text semantic to define the meaning, structure, or style of a word, line, or any arbitrary piece of text.
+*/
+
+/* The HTML <a> element (or anchor element) creates a hyperlink to other web pages, files, locations within the same page, email addresses, or any other URL. */
 a {}
+
+/* The HTML <abbr> element represents an abbreviation and optionally provides a full description for it. If present, the title attribute must contain this full description and nothing else. */
 abbr {}
+
+/* The HTML <b> element represents a span of text stylistically different from normal text, without conveying any special importance or relevance, and that is typically rendered in boldface. */
 b {}
+
+/* The HTML <bdi> element (bidirectional isolation) isolates a span of text that might be formatted in a different direction from other text outside it. */
 bdi {}
+
+/* The HTML <bdo> element (bidirectional override) is used to override the current directionality of text. It causes the directionality of the characters to be ignored in favor of the specified directionality. */
 bdo {}
+
+/* The HTML <br> element produces a line break in text (carriage-return). It is useful for writing a poem or an address, where the division of lines is significant. */
 br {}
+
+/* The HTML <cite> element represents a reference to a creative work. It must include the title of a work or a URL reference, which may be in an abbreviated form according to the conventions used for the addition of citation metadata. */
 cite {}
+
+/* The HTML <code> element represents a fragment of computer code. By default, it is displayed in the browser's default monospace font. */
 code {}
+
+/* The HTML <data> element links a given content with a machine-readable translation. If the content is time- or date-related, the <time> must be used. */
 data {}
+
+/* The HTML <dfn> element represents the defining instance of a term. */
 dfn {}
+
+/* The HTML <em> element marks text that has stress emphasis. The <em> element can be nested, with each level of nesting indicating a greater degree of emphasis. */
 em {}
+
+/* The HTML <i> element represents a range of text that is set off from the normal text for some reason, for example, technical terms, foreign language phrases, or fictional character thoughts. It is typically displayed in italic type. */
 i {}
+
+/* The HTML <kbd> element represents user input and produces an inline element displayed in the browser's default monospace font. */
 kbd {}
+
+/* The HTML <mark> element represents highlighted text, i.e., a run of text marked for reference purpose, due to its relevance in a particular context. For example it can be used in a page showing search results to highlight every instance of the searched-for word. */
 mark {}
+
+/* The HTML <q> element indicates that the enclosed text is a short inline quotation. This element is intended for short quotations that don't require paragraph breaks; for long quotations use the <blockquote> element. */
 q {}
+
+/*  	The HTML <rp> element is used to provide fall-back parentheses for browsers that do not support display of ruby annotations using the <ruby> element. */
 rp {}
+
+/* The HTML <rt> element embraces pronunciation of characters presented in a ruby annotations, which are used to describe the pronunciation of East Asian characters. This element is always used inside a <ruby> element. */
 rt {}
+
+/* The HTML <rtc> element embraces semantic annotations of characters presented in a ruby of <rb> elements used inside of <ruby> element. <rb> elements can have both pronunciation (<rt>) and semantic (<rtc>) annotations. */
 rtc {}
+
+/* The HTML <ruby> element represents a ruby annotation. Ruby annotations are for showing pronunciation of East Asian characters. */
 ruby {}
+
+/* The HTML <s> element renders text with a strikethrough, or a line through it. Use the <s> element to represent things that are no longer relevant or no longer accurate. However, <s> is not appropriate when indicating document edits; for that, use the <del> and <ins> elements, as appropriate. */
 s {}
+
+/* The HTML <samp> element is an element intended to identify sample output from a computer program. It is usually displayed in the browser's default monotype font (such as Lucida Console). */
 samp {}
+
+/* The HTML <small> element makes the text font size one size smaller (for example, from large to medium, or from small to x-small) down to the browser's minimum font size.  In HTML5, this element is repurposed to represent side-comments and small print, including copyright and legal text, independent of its styled presentation. */
 small {}
+
+/* The HTML <span> element is a generic inline container for phrasing content, which does not inherently represent anything. It can be used to group elements for styling purposes (using the class or id attributes), or because they share attribute values, such as lang. */
 span {}
+
+/* The HTML <strong> element gives text strong importance, and is typically displayed in bold. */
 strong {}
+
+/*  	The HTML <sub> element defines a span of text that should be displayed, for typographic reasons, lower, and often smaller, than the main span of text. */
 sub {}
+
+/* The HTML <sup> element defines a span of text that should be displayed, for typographic reasons, higher, and often smaller, than the main span of text. */
 sup {}
+
+/* The HTML <time> element represents either a time on a 24-hour clock or a precise date in the Gregorian calendar (with optional time and timezone information). */
 time {}
+
+/* The HTML <u> element renders text with an underline, a line under the baseline of its content. In HTML5, this element represents a span of text with an unarticulated, though explicitly rendered, non-textual annotation, such as labeling the text as being a proper name in Chinese text (a Chinese proper name mark), or labeling the text as being misspelled. */
 u {}
+
+/* The HTML <var> element represents a variable in a mathematical expression or a programming context. */
 var {}
+
+/* The HTML <wbr> element represents a word break opportunity—a position within text where the browser may optionally break a line, though its line-breaking rules would not otherwise create a break at that location. */
 wbr {}
