--- a/src/elements/elements.css
+++ b/src/elements/elements.css
@@ -5,14 +5,11 @@
     No deprecated element is used as of 4/19/2017
 */
 @import 'element.demarcating.css';
-@import 'element.embedded.css';
 @import 'element.forms.css';
 @import 'element.headings.css';
 @import 'element.interactive.css';
 @import 'element.media.css';
-@import 'element.scripting.css';
 @import 'element.sectioning.css';
-@import 'element.table.css';
+@import 'element.tables.css';
 @import 'element.text-inline.css';
 @import 'element.text.css';
-@import 'element.web-components.css';
