--- a/src/elements/element.forms.css
+++ b/src/elements/element.forms.css
@@ -1,14 +1,43 @@
+/* HTML provides a number of elements which can be used together to create forms which the user can fill out and submit to the Web site or application. */
+
+/* The HTML <button> element represents a clickable button. */
 button {}
+
+/* The HTML <datalist> element contains a set of <option> elements that represent the values available for other controls. */
 datalist {}
+
+/* The HTML <fieldset> element is used to group several controls as well as labels (<label>) within a web form */
 fieldset {}
+
+/* The HTML <form> element represents a document section that contains interactive controls to submit information to a web server. */
 form {}
+
+/* The HTML <input> element is used to create interactive controls for web-based forms in order to accept data from the user. */
 input {}
+
+/* The HTML <label> element represents a caption for an item in a user interface. */
 label {}
+
+/* The HTML <legend> element represents a caption for the content of its parent <fieldset>. */
 legend {}
+
+/* The HTML <meter> element represents either a scalar value within a known range or a fractional value. */
 meter {}
+
+/* The HTML <optgroup> element creates a grouping of options within a <select> element. */
 optgroup {}
+
+/* The HTML <option> element is used to define an item contained in a <select>, an <optgroup>, or a <datalist> element. As such, <option> can represent menu items in popups and other lists of items in an HTML document. */
 option {}
+
+/* The HTML <output> element represents the result of a calculation or user action. */
 output {}
+
+/* The HTML <progress> element represents the completion progress of a task, typically displayed as a progress bar. */
 progress {}
+
+/* The HTML <select> element represents a control that provides a menu of options: */
 select {}
+
+/* The HTML <textarea> element represents a multi-line plain-text editing control. */
 textarea {}
