--- a/src/elements/element.interactive.css
+++ b/src/elements/element.interactive.css
@@ -1,5 +1,18 @@
+/*
+  HTML offers a selection of elements which help to create interactive user interface objects.
+*/
+
+/* The HTML <details> element is used as a disclosure widget from which the user can retrieve additional information. */
 details {}
+
+/* The HTML <dialog> element represents a dialog box or other interactive component, such as an inspector or window. */
 dialog {}
+
+/* The HTML <menu> element represents a group of commands that a user can perform or activate. This includes both list menus, which might appear across the top of a screen, as well as context menus, such as those that might appear underneath a button after it has been clicked. */
 menu {}
+
+/* The HTML <menuitem> element represents a command that a user is able to invoke through a popup menu. This includes context menus, as well as menus that might be attached to a menu button. */
 menuitem {}
+
+/* The HTML <summary> element is used as a summary, caption, or legend for the content of a <details> element. */
 summary {}
