--- a/src/elements/element.text.css
+++ b/src/elements/element.text.css
@@ -1,13 +1,42 @@
+/*
+  Use HTML text content elements to organize blocks or sections of content placed between the opening <body> and closing </body> tags. Important for accessibility and SEO, these elements identify the purpose or structure of that content.
+*/
+
+/* The HTML <dd> element indicates the description of a term in a description list (<dl>). */
 dd {}
+
+/* The HTML <div> element is the generic container for flow content and does not inherently represent anything. Use it to group elements for purposes such as styling (using the class or id attributes), marking a section of a document in a different language (using the lang attribute), and so on. */
 div {}
+
+/* The HTML <dl> element represents a description list. The element encloses a list of groups of terms and descriptions. Common uses for this element are to implement a glossary or to display metadata (a list of key-value pairs). */
 dl {}
+
+/* The HTML <dt> element identifies a term in a description list. This element can occur only as a child element of a <dl>. It is usually followed by a <dd> element; however, multiple <dt> elements in a row indicate several terms that are all defined by the immediate next <dd> element. */
 dt {}
+
+/* The HTML <figcaption> element represents a caption or a legend associated with a figure or an illustration described by the rest of the data of the <figure> element which is its immediate ancestor. */
 figcaption {}
+
+/* The HTML <figure> element represents self-contained content, frequently with a caption (<figcaption>), and is typically referenced as a single unit. */
 figure {}
+
+/* The HTML <hr> element represents a thematic break between paragraph-level elements (for example, a change of scene in a story, or a shift of topic with a section). In previous versions of HTML, it represented a horizontal rule. It may still be displayed as a horizontal rule in visual browsers, but is now defined in semantic terms, rather than presentational terms. */
 hr {}
+
+/* The HTML <li> element is used to represent an item in a list. It must be contained in a parent element: an ordered list (<ol>), an unordered list (<ul>), or a menu (<menu>). In menus and unordered lists, list items are usually displayed using bullet points. In ordered lists, they are usually displayed with an ascending counter on the left, such as a number or letter. */
 li {}
+
+/* The HTML <main> element represents the main content of  the <body> of a document or application. The main content area consists of content that is directly related to, or expands upon the central topic of a document or the central functionality of an application. */
 main {}
+
+/* The HTML <ol> element represents an ordered list of items, typically rendered as a numbered list. */
 ol {}
+
+/* The HTML <p> element represents a paragraph of text. */
 p {}
+
+/* The HTML <pre> element represents preformatted text. Text within this element is typically displayed in a non-proportional ("monospace") font exactly as it is laid out in the file. Whitespace inside this element is displayed as typed. */
 pre {}
+
+/* The HTML <ul> element represents an unordered list of items, typically rendered as a bulleted list. */
 ul {}
