--- a/src/elements/element.forms.css
+++ b/src/elements/element.forms.css
@@ -1,7 +1,11 @@
 /* HTML provides a number of elements which can be used together to create forms which the user can fill out and submit to the Web site or application. */
 
 /* The HTML <button> element represents a clickable button. */
-button {}
+button {
+  background: transparent;
+  box-sizing: border-box;
+  border: 1px solid var(--black);
+}
 
 /* The HTML <datalist> element contains a set of <option> elements that represent the values available for other controls. */
 datalist {}
