--- a/src/generic/generic.css
+++ b/src/generic/generic.css
@@ -1,6 +1,8 @@
-@import "generic.reset.css";
+@import url("./generic.reset.css");
 
 html,
 body {
   font-family: var(--serif);
+  font-size: 1rem;
+  line-height: 1.3rem;
 }
