--- a/src/objects/objects.css
+++ b/src/objects/objects.css
@@ -1,3 +1,3 @@
 /* Objects */
-@import url("./objects.wrapper.css");
-@import url("./objects.full-width.css");
+@import url("wrapper.css");
+@import url("full-width.css");
