--- a/src/settings/settings.css
+++ b/src/settings/settings.css
@@ -1,2 +1,2 @@
-@import url("settings.colors.css");
-@import url("settings.typography.css");
+@import url("colors.css");
+@import url("typography.css");
