--- a/src/settings/settings.css
+++ b/src/settings/settings.css
@@ -1,2 +1,2 @@
-@import url("colors.css");
-@import url("typography.css");
+@import url("colors/colors.css");
+@import url("typography/typography.css");
